--- a/WishList/WishList/App.xaml
+++ b/WishList/WishList/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="WishList.App"
+﻿<Application x:Class="WishListApp.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:WishList"
+             xmlns:local="clr-namespace:WishListApp"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
